Updates to ms post MCF edits

--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -1,5 +1,5 @@
 ---
-title             : "Developmental consistency in children’s drawings of object categories across two countries"
+title             : "Developmental consistency in children’s drawings of object categories"
 shorttitle        : "Development of drawing"
 
 author: 
@@ -77,10 +77,13 @@ Indeed, there appear to be dramatic changes in how children encode diagnostic vi
  
 What drives these dramatic changes in children's drawings across development? 
 A common view is that these changes are driven primarily by children's increasing ability to plan and control their motor movements [@freeman1987current; @rehrig2018does]. 
-While such changes in visuomotor control are clearly important, this view fails to account for other important constraints, such as how well children are able to access previously acquired semantic knowledge about each target concept and maintain this information in working memory during drawing production.
-In our prior work, we found some evidence that these changes in children's drawings are accompanied by changes in children's ability to recognize drawings of object categories: in a correlational study, older children produced drawings of object categories that were more diagnostic of the categories they are trying to depict [@long2018drawings; @long2021parallel] and tended to rely more on these diagnostic visual features during recognition. 
-Thus, drawing is a skill that likely also relies on children's evolving perceptual category representations [@long2018drawings; @natu2016development; @dekker2011dorsal] as well as their increasing working memory capacity [@pailian2016visual].
+While such changes in visuomotor control are clearly important, this view fails to account for other important constraints — including how children represent different visual concepts and how well children are able to access these visual concepts when producing drawings. 
 
+In our prior work, we found that evidence that changes in children's drawings partly reflect changes in children's visual representations of common object categories. In a large observational dataset, older children produced drawings of object categories that were more diagnostic of the categories they are trying to depict [@long2018drawings; @long2021parallel], even when accounting for differences across age in basic shape tracing abilities and the amount of effort children expended on individual drawings. Furthermore, older children tended to rely more on these same diagnostic visual features when recognizing each other's drawings, suggesting that changes in children's internal representations may drive parallel changes in hildren's production and recognition of drawings. Thus, the drawings that children produce likely not only reflect their increasing motor abilities but their evolving perceptual category representations [@natu2016development; @dekker2011dorsal]. 
+
+<!-- Thus, drawing is a skill that likely also relies on children's evolving perceptual category representations [@long2018drawings; @natu2016development; @dekker2011dorsal] as well as their increasing working memory capacity [@pailian2016visual]. -->
+
+However, this work leaves open the contribution of children's evolving memory: children's ability to access semantic knowledge about categories and to maintain this information in mind when producing a drawing likely changes across childhood [@pailian2016visual].  
 Here, we directly test the idea that a principal reason younger children produce less recognizable drawings is because they simply have more difficulty recalling the relevant perceptual features of different categories: that is, when asked to "draw a [rabbit]", they may struggle to conjure up the relevant perceptual details and then hold in mind what rabbits tend to look like. 
 On this account, providing children with additional perceptual information about different categories -- for example, canonical photographs of typical exemplars -- could help them improve their drawings of these categories, as it does with adults [@fan2020relating]. 
 However, prior work also suggests that younger children tend to draw what they know about objects rather than integrate the information in their immediate perceptual experience.  
@@ -94,7 +97,7 @@ To tease apart these alternatives, we investigated the development of children's
 Second, we tested the generalizability of our findings across different populations by recruiting children from two different sites in different countries — San Jose, USA and Beijing, China.
 Most empirical studies on children's drawings have been conducted exclusively on small samples of children from the United States or Western Europe, limiting their generalizability. Further, children in different communities may spend more or less time practicing drawing or use different visual conventions to draw [@cohn2012explaining; @willats2006making]. While some prior work has focused on differences in children's drawings across these two countries, most of this descriptive work has focused on differences in educational practices that may account for any observed differences [@la2001children; @winner1989can; @huntsinger2011cultural]. Instead, here we focus on the degree to which the overall developmental trajectory of drawing abilities are similar between children at these two sites. 
 
-Finally, we assessed the degree to which visuomotor development accounts for observed developmental changes in drawing recognizability. While it is clear that visuomotor control influences how and what we can draw, little work has directly related meausres of visuomotor control to drawing outcomes. To do so, we measured each child's visuomotor control via a shape tracing task on a table and related these measurements of tracing accuracy to the recognizability of the drawings that each child produced. 
+Finally, we assessed the degree to which visuomotor development accounts for observed developmental changes in drawing recognizability. While it is clear that visuomotor control influences how and what we can draw, little work has directly related measures of visuomotor control to drawing outcomes [[@long2021parallel]. To do so, we measured each child's visuomotor control via a shape tracing task on a table and related these measurements of tracing accuracy to the recognizability of the drawings that each child produced. 
 
 In the present study, we thus collect shape tracings and digital drawings of visual concepts from 4-9 year-old children in two different countries using both picture cues and verbal cues.  In doing so, we make three major contributions to our understanding of the development of children's drawings. First, we replicate our prior findings  [@long2021parallel] that the recognizability of children's drawings increases steadily throughout this age range (4-9 years). Second, we test the degree to which working memory constraints might account for these developmental changes. In keeping with accounts of naïve realism and contra a strong account of working memory limitations, we predicted that only older children would be able to use the visual information present in the canonical photographs to improve their drawings, Third, we test the generalizability of our findings across two different countries. We predicted that we would see convergence in the development of drawing abilities across both geographical sites, with older children becoming progressively better at producing recognizable drawings. In addition, we predicted that most of the variance across geographical sites in drawing ability would be explainable by differences in visuomotor control, operationalized as performance on a shape tracing task; these primary analyses were pre-registered at https://osf.io/qymjr/.
 
@@ -232,11 +235,12 @@ count_by_id <- d %>%
 265 participants were recruited from two local children's museum in [BLINDED] and preschool and elementary schools outside of Beijing; approximately equal numbers of participants were recruited in Northern California and the Beijing area. Our goal was to recruit 120 children between 4-9 years of age after exclusions (i.e. 20 4-year-olds, 20 5-year-olds, etc.) at each geographical site. In the San Jose based sample, 135 children participated in the experiment; 6 participants were excluded, (3) for skipping more than 6 drawing trials and (3) for scribbling three or more times in a row. Six additional participants were tested but their data was not recorded due to a technical error, and two participants never advanced past the practice trials, leading to a final sample of `r count_by_site$num_participants[1]` children. In the Beijing based sample, `r count_by_site$num_participants[2]` children participated; an additional 8 participants were tested but their data was not recorded due to a technical error with the remote database. Two 10-year-olds (aged 10 years, 0 months and 10 years, 1 month) were accidentally tested and included in the 9-year-old age group. On average, each child contributed `r mean(count_by_id$num_drawings)` drawings to analysis (min `r min(count_by_id$num_drawings)`, max = `r max(count_by_id$num_drawings)`). No additional demographic data was recorded about the participants. This protocol was approved by both the Institutional Review Board at [blinded] (43992, Development of Children's Drawing Abilities) and the Department of Psychology Ethics Committee at [blinded] in Beijing, China.
 
 ## Task Procedure
-Before beginning, a trained experimenter first told each child “After this game is over, someone is going to try to recognize what you were trying to draw. So, please draw so that someone else could try what you were trying to draw.” A native English speaker gave these instructions to the San Jose based sample, and a native Mandarin speaker gave a translation of these instructions to the Beijing based sample. The rest of the instructions were given via audio and video cues of native English/Mandarin speakers, respectively; all experimental code, videos, and stimuli are available on the public repository for this project. All children used their fingers to draw on an Ipad Pro (12.9") that was set at a slight angle on a table via a tablet case.  All experimental code, videos, and data are available on the public repository for this project.
 
-Children first completed two series of tracing trials to obtain an estimate of their tracing abilities; children were first asked to trace a square and then a complex shape (see Figure \ref{fig:example-tasks}). Children had maximum of 30 seconds to produce their tracings/drawings on all trials, and strokes could not be deleted once drawn; stroke-by-stroke data for each drawing was stored on a remote server.
+Children participated in a drawing game using their fingers to draw, completing 2 shape tracing trials and 12 object category drawing trials. Children drew using an Ipad Pro (12.9") that was set at a slight angle on a table via a tablet case, and had maximum of 30 seconds to produce their tracings and drawings. Strokes could not be deleted once drawn, and stroke-by-stroke data for each drawing was stored on a remote server.
 
-The primary experimental manipulation was the drawing task that children participated in; each child completed both tasks and the order of tasks was counterbalanced across participants. Overall, each child completed 2 tracing trials and 12 drawing trials, with six categories randomly assigned to each condition and displayed in a random order. on verbal-cue trials, children saw a short video clip where an experimenter said,  “What about a [cat]? Can you draw a [cat]?” (exact Mandarin translation has trouble in latex). On picture-cue trials, children heard audio of the same experimenter who said,  “What about this [cat]? Can you draw the [cat] as it looks in the picture?”  (Mandarin translation) while seeing a canonical photograph of each category; this photograph then remained on the screen for the duration of the drawing trial.  This photograph was randomly sampled from one of three possible exemplars. Task examples are shown in Figure \ref{fig:example-tasks}.
+Before beginning the game, a trained experimenter first told each child “After this game is over, someone is going to try to recognize what you were trying to draw. So, please draw so that someone else could try what you were trying to draw.” A native English speaker gave these instructions to the San Jose based sample, and a native Mandarin speaker gave a translation of these instructions to the Beijing based sample. 
+
+After these instructions, children first completed two series of tracing trials to obtain an estimate of their tracing abilities; children were first asked to trace a square and then a complex shape (see Figure \ref{fig:example-tasks}).  The primary experimental manipulation was the drawing cue that children heard on the subsequent drawing trials (see task examples in Figure \ref{fig:example-tasks}). Children completed six trials with the same cue type (verbal or picture) before switching; cue order was counterbalanced across participants. On verbal cue trials, children saw a short video clip where an experimenter said,  “What about a [cat]? Can you draw a [cat]?”.  On picture-cue trials, children heard audio of the same experimenter who said,  “What about this [cat]? Can you draw the [cat] as it looks in the picture?”  while seeing a canonical photograph of each category; this photograph then remained on the screen for the duration of the drawing trial.  This photograph was randomly sampled from one of three possible exemplar (see Appendix). All experimental code, videos, translations, and stimuli are available on the public repository for this project. 
 
 ```{r example-tasks, fig.env = "figure", out.width="100%", fig.pos = "H", fig.cap = "Example trials from the tracing assessment and two drawing tasks."}
 knitr::include_graphics("figs/task_examples.png")
@@ -246,11 +250,11 @@ knitr::include_graphics("figs/task_examples.png")
 For each drawing trial, children had up to 30 seconds to complete their drawings with their fingers. We recorded both the final drawings and the parameters of each stroke produced by children, allowing us to estimate the amount of time children put into their drawings (e.g., end time of last stroke — start time of first stroke). As a second measure of effort, we also counted the number of strokes that children put into a given drawing. Finally, we estimated the proportion of the drawing canvas that was filled (e.g., 'ink used') by computing the proportion of each final drawing that were non-white pixels.
 
 ## Measuring Tracing Accuracy
-As in @long2021parallel, we used an automated procedure for evaluating how accurately participants performed the tracing task, validated against empirical judgments of tracing quality. We decomposed tracing accuracy into two components: a shape error component and a spatial error component. Shape error reflects how closely the participant’s tracing matched the contours of the target shape; the spatial error reflects how closely the location, size, and orientation of the participant’s tracing matched the target shape.
+As in @long2021parallel, we used an automated procedure for evaluating how accurately participants performed the tracing task, validated against empirical judgments of tracing quality. We decomposed tracing accuracy into two components: a shape error component and a spatial error component. Shape error reflects how closely the participant’s tracing matched the contours of the target shape; the spatial error reflects how closely the location, size, and orientation of the participant’s tracing matched the target shape. See Appendix for details on how these error components were computed and translated into a tracing score.
 
-To compute these error components, we applied an image registration algorithm, AirLab [@sandkuhler2018], to align each tracing to the target shape, yielding an affine transformation matrix that minimized the pixel-wise correlation distance between the aligned tracing, $T$, and the target shape, $S$: $Loss_{NCC} = - \frac{\sum S \cdot T - \sum E(S) E(T)}{N \sum Var(S) Var(T)}$, where $N$ is the number of pixels in both images.  The shape error was defined by the final correlation distance between the aligned tracing and the target shape. The spatial error was defined by the magnitude of three distinct error terms: location, orientation, and size error, derived by decomposing the affine transformation matrix above into translation, rotation, and scaling components, respectively. In sum, this procedure yielded four error values for each tracing: one value representing the shape error (i.e., the pixel-wise correlation distance) and three values representing the spatial error (i.e., magnitude of translation, rotation, scaling components). 
 
-We used the tracing quality ratings to obtained in @long2021parallel to assign weights to each of their error terms; adult observers ($N$=70) rated 1325 tracings (i.e., 50-80 tracings per shape per age) and evaluated “how well the tracing matches the target shape and is aligned to the position of the target shape” on a 5-point scale. An ordinal regression mixed-effects model to predict these 5-point ratings, which contained correlation distance, translation, rotation, scaling, and shape identity (square vs. star) as predictors, with random intercepts for rater. This model yielded parameter estimates that could then be used to score each tracing in the dataset; we averaged scores for both shapes to yield a single tracing score for each participant.
+
+
 
 
 ## Measuring drawing recognizability 
@@ -464,14 +468,15 @@ avg_intensity <- d %>%
 
 ```{r plot-effort, include=FALSE}
 ## Make compiled plot of descriptives
-base_size_chosen=14 # size of text in plots
+base_size_chosen=12 # size of text in plots
 smooth_alpha=.2
 
 p1=ggplot(draw_duration, aes(age_numeric,mean, color=condition)) +
   geom_pointrange(aes(ymin = ci_lower, ymax = ci_upper), position = position_dodge(width = 0.5)) +
   theme_few(base_size = base_size_chosen) +
   labs(x='Age', y='Draw duration (s)') +
-  theme(legend.position = "none") + 
+  scale_color_viridis(name="", discrete=TRUE, option='D', begin=.2, end=.8) +
+  theme(legend.position = "bottom") + 
   ylim(0,30) +
   facet_grid(~site)
 
@@ -479,7 +484,8 @@ p2=ggplot(avg_intensity, aes(age_numeric,mean, color=condition)) +
   geom_pointrange(aes(ymin = ci_lower, ymax = ci_upper), position = position_dodge(width = 0.5)) +
   theme_few(base_size = base_size_chosen) +
   labs(x='Age', y='Ink used (mean intensity)') +
-  theme(legend.position = "none") + 
+  scale_color_viridis(name="", discrete=TRUE, option='D', begin=.2, end=.8) +
+  theme(legend.position = "bottom") + 
   ylim(.02,.08) +
   facet_grid(~site)
 
@@ -487,7 +493,8 @@ p3=ggplot(num_strokes, aes(age_numeric,mean, color=condition)) +
   geom_pointrange(aes(ymin = ci_lower, ymax = ci_upper), position = position_dodge(width = 0.5)) +
   theme_few(base_size = base_size_chosen) +
   labs(x='Age', y='Number of strokes') +
-  theme(legend.position = "none") +
+  theme(legend.position = "bottom") +
+  scale_color_viridis(name="", discrete=TRUE, option='D', begin=.2, end=.8) +
   ylim(0,15) +
   facet_grid(~site)
 ```
@@ -547,27 +554,32 @@ ggplot(item_effects_not_spread, aes(x=as.numeric(age_numeric), y=mean, color=sit
   scale_color_viridis(discrete=TRUE, name="", option='B', begin=0, end=.4)
 ```
 
-# Discussion
-Here, we examined the developmental trajectory of the recognizability of children's drawings across two different drawing tasks and geographical locations. Overall, we found a consistent developmental trajectory from 4-9 years of age, replicating previous work using observational datasets [@long2021parallel] In addition, we found that asking children to draw categories when provided witha verbal cue ("Can you draw a [cat]?") vs.a picture cue ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall specific, canonical exemplars of object categories when they are trying to draw them. 
+# General Discussion
+Here, we examined the developmental trajectory of the recognizability of children's drawings across two different drawing tasks and geographical locations. Overall, we found a consistent developmental trajectory from 4-9 years of age, replicating previous work using observational datasets [@long2021parallel]. We found that asking children to draw categories when provided with a verbal cue ("Can you draw a [cat]?") vs. a picture cue ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall specific, canonical exemplars of object categories when they are trying to draw them. 
 
-Instead, we found that the recognizability of children's drawings differed between our two different geographical sites -- Beijing, China and San Jose, USA  Why might this be the case?  Our initial hypothesis was that children who had daily practice with a non-orthographic, complex writing system would exhibit greater dexterity in our tracing assessment task -- and that this dexterity could be a factor in how recognizable their drawings were.  However, children across the two sites showed equivalent shape tracing abilities, despite the fact that children's individual tracing scores were strong predictors of the recognizability of the drawings that they produced. Thus, this finding both confirms the idea that children's visuomotor abilities strongly influence the drawings they produce yet further suggests that it is far from the only factor that does so.
+Instead, we found that the recognizability of children's drawings differed between our two different geographical sites -- Beijing, China and San Jose, USA  Why might this be the case?  Our initial hypothesis was that children who had daily practice with a non-orthographic, complex writing system would exhibit greater dexterity in our tracing assessment task -- and that this dexterity could be a factor in how recognizable their drawings were.  However, children across the two sites showed equivalent shape tracing abilities, despite the fact that children's individual tracing scores were strong predictors of the recognizability of the drawings that they produced. A second possibility is that children from preschools near Beijing were simply more engaged with the task than children recruited at a children's museum outside San Jose, USA: A more academic context could have created an environment in which children felt particularily incentivized to spend more effort on their drawings. Nonetheless, our measures of drawing's effort (e.g., amount of time spent drawing, number of strokes made) did not account for differences in recognizability across sites. Furthermore, we saw systematic differences in the object categories that were more or less recognizable across sites, which is not well-explained by this account. Thus, this finding both confirms the idea that children's visuomotor abilities strongly influence th recognizability of the drawings they produce, yet further suggests that it is far from the only factor that does so.
 
-A second possibility that recognizability may have differed across sites is that children recruited at preschools near Beijing were simply more engaged with the task than children recruited at museums near San Jose, USA. A more academic context could have created an environment in which children felt incentivized to spend more effort on their drawings. However, our measures of children's effort (e.g., amount of time spent drawing) did not account for differences in recognizability across sites. Furthermore, we saw systematic differences in the object categories that were more or less recognizable across sites, which is not well-explained by this account.  
+However, while many have sought to examine variation across different cultural contexts in children's drawings [@winner1989can] or cognitive abilities that may be relevant to children's drawing abilities -- including object recognition [@kuwabara2016cultural] -- we note that this is there is substantial variation within different geographical locations and countries that often goes unmeasured [@amir2020cross].  Indeed, this unmeasured variation within sites may lead to the low replicability of some cross-cultural findings [@carstensen2021investigating]. For example, some work has suggested that the distinction between wheat vs. rice farming traditions explains substantial variation in cultural practices within China [@talhelm2014large]. We thus caution against a strong interpretation of the observed site differences, as we believe that drawings from children within the same country -- or even area code --  may differ in the very same ways children's drawings differed in this dataset. For example, the children we recruited from Beijing vs. San Jose could differ widely in the amount of time they spending practicing drawing. If so, then children who spend more time drawing may simply have more experience communicating about the diagnostic features of different object categories.  
 
-These results of course do not preclude the possibility that children's drawings differed across these two conditions or geographical sites in other interesting ways beyond their recognizability. Indeed, some work has shown that young children across different cultural contexts tend to produce different tadpole drawings of varying heights and with different amounts of detail [@gernhardt2015cultural] and place a horizon line in systematically different locations when drawing scenes [@senzaki2014holistic]. Thus, finer-grained measurements of these drawings could reveal differences -- with respect to the exact visual features that children chose to include, the strategies they employed while drawing, or the order in which they chose to draw certain elements of these categories.  We have thus made this dataset and the resulting code publicly available for these exploratory analyses.
+Furthermore, we note that while this work moves beyond investigating the drawings of children at a single geographical location, these children are still in many ways non-representative of the general population. For example, children in more rural populations may spend considerably less time both consuming and producing drawings of object categories. Thus, these developmental trajectories could thus vary in several ways that are not captured by the populations represented in the the present dataset. 
 
-However, while many have sought to examine variation across different cultural contexts in children's drawings [@winner1989can] or cognitive abilities that may be relevant to children's drawing abilities -- including object recognition [@kuwabara2016cultural] -- we note that this is there is substantial variation within different geographical locations and countries that often goes unmeasured [@amir2020cross].  Indeed, this unmeasured variation within sites may lead to the low replicability of some cross-cultural findings [@carstensen2021]. For example, some work has suggested that the distinction between wheat vs. rice farming traditions explains substantial variation in cultural practices within China [@talhelm2014large]. We thus caution against a strong interpretation of the observed site differences, as we believe that drawings from children within the same country -- or even area code --  may differ in the very same ways children's drawings differed in this dataset. For example, children across could reasonably differ in the amount of practice they have drawing common object categories. If so, then children who spend more time drawing may simply have more practice communicating about the diagnostic features of different object categories. In future work, surveys that assesses the amount of time that children in many different communities spend drawing outside could address this hypothesis.  
+Indeed, a natural question for future work concerns the relationship between the degree to which children with difference kinds of experience might also show differences in their ability to produce or recognize drawings of object categories. In a U.S. based sample, prior work found that older children not only produce more recognizable drawings of object categories but tend to be better skilled at recognizing other children's drawings [@long2021parallel]. Thus, if children in different environmental contexts tend to spend more time practicing drawing, these children may also be more skilled at recognizing drawings of object categories and perhaps explicitly identifying the distinctive visual features of these categories.
 
-Instead, a natural question for future work concerns the relationship between the degree to which children with difference kinds of experience might also show differences in their ability to recognize drawings of object categories. In a U.S. based sample, prior work found that older children not only produce more recognizable drawings of object categories but tend to be better skilled at recognizing other children's drawings [@long2021parallel]. Thus, if children in different environmental contexts tend to spend more time practicing drawing, these children may also be more skilled at recognizing drawings of object categories and perhaps explicitly identifying the distinctive visual features of these categories.
+Of course, these results of course do not preclude the possibility that children's drawings differed across these two conditions or geographical sites in other interesting ways beyond their recognizability. Some work has shown that young children across different cultural contexts tend to produce different tadpole drawings of varying heights and with different amounts of detail [@gernhardt2015cultural] and place a horizon line in systematically different locations when drawing scenes [@senzaki2014holistic]. Thus, finer-grained measurements of these drawings could reveal differences -- with respect to the exact visual features that children chose to include, the strategies they employed while drawing, or the order in which they chose to draw certain elements of these categories.  We have thus made this dataset and the resulting code publicly available for these exploratory analyses.
 
-Finally, while this work moves beyond investigating the drawings of children at a single geographical location, these children are still in many ways non-representative of the general population. For example, children in more rural populations may spend considerably less time both consuming and producing drawings of object categories. Thus, these developmental trajectories could thus vary in several ways that are not captured by the populations represented in the the present dataset. 
-
-Nonetheless, these results take a first step towards characterizing the consistency and variability in the developmental trajectory of children's drawings across development, two different tasks, and geographical locations.  We propose that the systematic collection of digital drawings across many different populations, ages, and tasks has potential to shed light on the processes that result in the development of children's drawing abilities.  
+Nonetheless, these results take a first step towards characterizing the consistency in the developmental trajectory of children's drawings.  We propose that the systematic collection of digital drawings from children with a wide variety of experiences will help uncover the myriad factors that drive the developmental changes in children's drawings -- and in turn help us understand how different cognitive systems coordinate to produce this complex behavior. 
 
 # Acknowledgements  
-We thank Yi Feng and Megan Merrick for assistance with data collection, with whom this project would have not been possible. We also gratefully acknowledge the San Jose Children's Discovery Museum for their collaboration. We are also thankful to all of the parents at XX and XX preschool whose children participated. We also thank the members of the Stanford Language and Cognition lab for their feedback. This work was funded by an NSF SPRF-FR Grant \#1714726 to BLL and a Jacobs Foundation Fellowship to MCF. 
+[BLINDED]
+<!-- We thank Yi Feng and Megan Merrick for assistance with data collection, with whom this project would have not been possible. We also gratefully acknowledge the San Jose Children's Discovery Museum for their collaboration. We are also thankful to all of the parents at XX and XX preschool whose children participated. We also thank the members of the Stanford Language and Cognition lab for their feedback. This work was funded by an NSF SPRF-FR Grant \#1714726 to BLL and a Jacobs Foundation Fellowship to MCF.  -->
+
+
+```{r appendix, include = FALSE}
+render_appendix("appendix.Rmd")
+```
 
 \newpage
+
 
 # References
 ```{r create_r-references}
