--- a/writing/references.bib
+++ b/writing/references.bib
@@ -6,6 +6,15 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{carstensen2021investigating,
+  title={Investigating cross-cultural differences in reasoning, vision, and social cognition through replication},
+  author={Carstensen, Alexandra and Cao, Anjie and Gao, Shan and Frank, Michael C},
+  booktitle={Proceedings of the Annual Meeting of the Cognitive Science Society},
+  volume={43},
+  number={43},
+  year={2021}
+}
+
 @article{talhelm2014large,
   title={Large-scale psychological differences within China explained by rice versus wheat agriculture},
   author={Talhelm, Thomas and Zhang, Xiao and Oishi, Shige and Shimin, Chen and Duan, Dechao and Lan, Xiaoli and Kitayama, Shinobu},
