minor updates to manuscript throughout

--- a/writing/appendix.tex
+++ b/writing/appendix.tex
@@ -5,8 +5,8 @@
 
 
 \begin{appendix}
-\hypertarget{tracing-scores}{%
-\section{Tracing Scores}\label{tracing-scores}}
+\section{}
+Tracing Scores
 
 To compute these error components, we applied an image registration
 algorithm, AirLab (Sandkühler, Jud, Andermatt, \& Cattin, 2018), to
